04-Kubernetes-Object/secretreader-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secretreader
spec:
  selector:
    matchLabels:
      name: secretreader
  replicas: 1
  template:
    metadata:
      labels:
        name: secretreader
    spec:
      containers:
      - name: secretreader
        image: karthequian/secretreader:latest
