04-Kubernetes-Object/wishlist-deployment-configmap-advanced.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wishlist-deployment
  labels:
    app: wishlist
spec:
  replicas: 3 #We always want more than 1 replica for HA
  selector:
    matchLabels:
      app: wishlist
  template:
    metadata:
      labels:
        app: wishlist
    spec:
      volumes:
        - name: config-volume # Configmap (Step 2: Declare as a volume)
          configMap:
            # Provide the name of the ConfigMap containing the files you want
            # to add to the container
            name: log-config
      containers:
      - name: wishlist #1st container
        image: karthequian/wishlist:1.0 #Dockerhub image
        ports:
        - containerPort: 8080 #Exposes the port 8080 of the container
        volumeMounts:
        - name: config-volume
          readOnly: true
          mountPath: "/var/lib/wishlist/"
      - name: catalog #2nd container
        image: karthequian/wishlist-catalog:1.0
        ports:
        - containerPort: 8081
        volumeMounts:
        - name: config-volume
          readOnly: true
          mountPath: "/var/lib/wishlist/"
      - name: auth #3rd container
        image: karthequian/wishlist-auth:1.0
        ports:
        - containerPort: 8082
        volumeMounts:
        - name: config-volume
          readOnly: true
          mountPath: "/var/lib/wishlist/"
---
kind: Service
apiVersion: v1
metadata:
  name: wishlist-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: wishlist
  ports:
  - name: wishlist-port
    protocol: TCP
    port: 8080
    targetPort: 8080
  - name: wishlist-auth-port
    protocol: TCP
    port: 8081
    targetPort: 8081
  - name: wishlist-catalog-port
    protocol: TCP
    port: 8082
    targetPort: 8082
